--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "gh-pages": "^6.3.0",
     "sass": "^1.77.4",
     "typescript": "^5.4.5",
     "vite": "^5.2.12"
